refactor: extract CharacterChatService to break circular dependency
- Extract chat orchestration (sseAsk, blockingAsk, asyncCheckAndChat,
  saveAfterAiResponse) from CharacterMessageService into CharacterChatService
- Trim CharacterMessageService to pure message CRUD with no upward dependencies
- Create ChatController (/chat/process) for SSE chat endpoint
- Trim CharacterMessageController to message CRUD only
- Update ExtCharacterController to use CharacterChatService
- Unify Agent/Character terminology in English-only comments
- Dependency direction: ChatService -> AgentService -> CharacterService -> MessageService